[Subiendo el proyecto de PlatziVideo para su captura en celular]

--- a/html/platzi-video-index.html
+++ b/html/platzi-video-index.html
@@ -170,6 +170,6 @@
   </section>
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script type="text/javascript" src="js/platzi-video.js"></script>
+  <script type="text/javascript" src="../js/platzi-video.js"></script>
 </body>
 </html>
