--- a/index.html
+++ b/index.html
@@ -50,12 +50,25 @@
     <section class="portfolio" id="portafolio">
       <div class="container">
         <h2>Portafolio (Proyectos Destacados)</h2>
+        <article class="project platzi-video">
+          <div class="project-details">
+          <h3 class="project-title">PlatziVideo</h3>
+          <h6 class="project-course">HTML / CSS / JS</h6>
+          <p class="project-date"><small><strong>Fecha:</strong> 17/05/19</small></p>
+          <p class="project-url"><small><strong>Puedes verlo en: </strong><a href="html/platzi-video-index.html">www.percymeneses08.com/html/platzi-video-index.html</a></small></p>
+          <p class="project-description">En este proyecto puse todos mis conocimientos hasta la fecha en práctica. Lo que más se me complicó fue querer agregar cosas
+            de los cuales no tenía ni idea de cómo funcionaba, pero investigando pude crear una solución.</p>
+          </div>
+          <figure class="project-image-container">
+            <img class="project-image platzi-video" src="images/platzi-video-images/platzi-video-page.png" width="475" alt="captura de pantalla de mi proyecto de PlatziVideo"/>
+          </figure>
+        </article>
         <article class="project">
           <div class="project-details">
           <h3 class="project-title">Movie.es</h3>
-          <h6 class="project-course">Html / CSS / Js</h6>
+          <h6 class="project-course">HTML / CSS / JS</h6>
           <p class="project-date"><small><strong>Fecha:</strong> 27/02/19</small></p>
-          <p class="project-url"><small><strong>Puedes verlo en: </strong><a href="html/theater-index.html">www.percymeneses08.com/theater-index.html</a></small></p>
+          <p class="project-url"><small><strong>Puedes verlo en: </strong><a href="html/theater-index.html">www.percymeneses08.com/html/theater-index.html</a></small></p>
           <p class="project-description">En este proyecto puse a prueba todos mis conocimientos adquiridos previamente. 
             Esta vez se me hizo más fácil, no me demoré demasiado, en especial, con el maquetado que realicé con ayuda de
             CSS Grid, y el Responsive Design.</p>
@@ -64,7 +77,7 @@
             <img class="project-image theater" src="images/theater-images/proyectoTheater.png" width="475" alt="captura de pantalla de mi proyecto de CTA"/>
           </figure>
         </article>
-        <article class="project instagram">
+        <!-- <article class="project instagram">
           <div class="project-details">
           <h3 class="project-title">Instagram (layout)</h3>
           <h6 class="project-course">Html / CSS</h6>
@@ -76,13 +89,13 @@
           <figure class="project-image-container">
             <img class="project-image" src="images/instagram-images/instagram-page.jpg" width="475" alt="captura de pantalla de mi proyecto de CTA"/>
           </figure>
-        </article>
+        </article> -->
         <article class="project">
           <div class="project-details">
           <h3 class="project-title">Pinterest (layout)</h3>
           <h6 class="project-course">Html / CSS</h6>
           <p class="project-date"><small><strong>Fecha:</strong> 01/23/19</small></p>
-          <p class="project-url"><small><strong>Puedes verlo en: </strong><a href="html/pinterest-index.html">www.percymeneses08.com/pinterest-index.html</a></small></p>
+          <p class="project-url"><small><strong>Puedes verlo en: </strong><a href="html/pinterest-index.html">www.percymeneses08.com/html/pinterest-index.html</a></small></p>
           <p class="project-description">Este proyecto fue para llevar al siguiente nivel mis conocimientos adquiridos sobre CSS Grid.
             Me costó mucho trabajo hacer que se vean ordenadas las imágenes pues, estas no tenían el mismo tamaño entre ellas como en el proyecto de Instagram.
           </p>
@@ -114,7 +127,7 @@
       clase "event-list", en el cual están toda la información 
       dividida correctamente. --> </section>
     <div class="container sub-title">
-      <h2 class="event-list-title">Más sobre mi experiencia</h2>
+      <h2 class="event-list-title">Eventos (destacados)</h2>
     </div>
     <section class="event-list">
       <div class="container">
@@ -169,7 +182,7 @@
     </section>
     <section class="certificates" id="certificados">
       <section class="container certificates-title">
-        <h2>Certificados (Actualizados)</h2>
+        <h2>Certificados (destacados)</h2>
       </section>
       <div class="diplomas">
           <figure class="certificates-image devfest">
@@ -216,11 +229,12 @@
     <footer class="footer">
       <div class="container">
         <div>
-          <p>Curso de desarrollo web online 2018 <img src="images/portfolio-images/platzi.png" width="50" alt="platzi"></p>
+          <p>Based on <a href= "https://twitter.com/thespianartist" target="_blank">@terspieanartist</a>'s design</p>
         </div>
         <div>
-          <p>Based on <a href= "https://twitter.com/thespianartist" target="_blank">@terspieanartist</a>'s design by Percy Meneses Luyo</p>
+          <p>Developed by Percy Meneses Luyo with <strong>❤</strong></p>
         </div>
+        <div>2018</div>
       </div>
     </footer>
   </body>
