--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <div class="container width">
         <figure class="logo">
         <img src="images/portfolio-images/nombre.png" height="50" alt="Logo de mi nombre completo"/>
        </figure>
@@ -36,7 +36,7 @@
       </div>
     </header>
     <section class="hero">
-      <div class="container">
+      <div class="container width">
           <h1>
             ¡Hola!, soy <strong>Percy Meneses</strong>,<br/>desarrollador 
             <strong>Front-end</strong><br/>apasionado por el<br/>aprendizaje
@@ -90,7 +90,7 @@
             <img class="project-image" src="images/instagram-images/instagram-page.jpg" width="475" alt="captura de pantalla de mi proyecto de CTA"/>
           </figure>
         </article> -->
-        <article class="project">
+        <article class="project pinterest">
           <div class="project-details">
           <h3 class="project-title">Pinterest (layout)</h3>
           <h6 class="project-course">Html / CSS</h6>
@@ -211,7 +211,7 @@
       </div>
     </section>
     <section class="contact" id="contacto">
-      <div class="container">
+      <div class="container width">
           <form action="/suscripcion/" class="form-email">
             <h3>Contáctame</h3>
             <input type="text" placeholder="Déjame tu email"/>
@@ -227,15 +227,31 @@
       </div> 
     </section>
     <footer class="footer">
-      <div class="container">
+      <div class="container width foot">
         <div>
           <p>Based on <a href= "https://twitter.com/thespianartist" target="_blank">@terspieanartist</a>'s design</p>
         </div>
         <div>
-          <p>Developed by Percy Meneses Luyo with <strong>❤</strong></p>
+          <p class="developer">Developed by Percy Meneses Luyo with <strong>❤</strong></p>
         </div>
         <div>2018</div>
       </div>
     </footer>
+    <!-- <div class="fixed">
+      <ol>
+        <li>
+          <a class="link" href="#portafolio">Portafolio</a>
+        </li>
+        <li>
+          <a class="link" href="#eventos">Experiencia</a>
+        </li>
+        <li>
+          <a class="link" href="#certificados">Certificados</a>
+        </li>
+        <li>
+          <a class="link contact-me" href="#contacto">Contáctame</a>
+        </li>
+      </ol>
+    </div> -->
   </body>
 </html>
