Arreglando el centrado del título de los proyectos y de los eventos

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </section>
     <section class="portfolio" id="portafolio">
       <div class="container">
-        <h2>Proyectos (Destacados)</h2>
+        <h2 class="project-title">Proyectos (Destacados)</h2>
         <article class="project platzi-video">
           <div class="project-details">
           <h3 class="project-title">PlatziVideo</h3>
@@ -131,7 +131,7 @@
       <h2 class="event-list-title">Eventos (destacados)</h2>
     </div>
     <section class="event-list">
-      <div class="container">
+      <div class="container eve">
         <article class="event">
           <figure class="event-image-container">
             <img src="images/portfolio-images/io-extended.jpg" alt="foto de la i/o extended 2018"/>
