Arreglando un bug, el título del container de proyectos

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </section>
     <section class="portfolio" id="portafolio">
       <div class="container">
-        <h2 class="project-title">Proyectos (Destacados)</h2>
+        <h2 class="project-tit">Proyectos (Destacados)</h2>
         <article class="project platzi-video">
           <div class="project-details">
           <h3 class="project-title">PlatziVideo</h3>
