Arreglando el centrado del container proyectos en la versión móvil

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
     </section>
     <section class="portfolio" id="portafolio">
-      <div class="container">
+      <div class="container portfolio">
         <h2 class="project-tit">Proyectos (Destacados)</h2>
         <article class="project platzi-video">
           <div class="project-details">
