Moviendo mis proyectos a GitHub y agregando más eventos

--- a/index.html
+++ b/index.html
@@ -51,12 +51,29 @@
     <section class="portfolio" id="portafolio">
       <div class="container portfolio">
         <h2 class="project-tit">Proyectos (Destacados)</h2>
+        <article class="project compraFacil">
+          <div class="project-details">
+          <h3 class="project-title">Compra Fácil</h3>
+          <h6 class="project-course">HTML / CSS / JS / Python / Firebase</h6>
+          <p class="project-date"><small><strong>Fecha:</strong> 29/07/19</small></p>
+          <p class="project-url"><small><strong>Puedes verlo en: </strong><a href="https://percymeneses08.github.io/CompraFacil/">https://percymeneses08.github.io/CompraFacil/</a></small></p>
+          <p class="project-description">
+            Este proyecto grupal fue desafiante pues, por un lado (<a href="https://www.youtube.com/channel/UCREDjwC4KYdL-m3aQ3LpA6w">Jesús</a>, 
+            <a href="https://www.linkedin.com/in/jhan-christian-calderon-mariano-20b12a163/">Christian</a> y <a href="https://github.com/PBenavides">Pablo</a>) 
+            aprendieron scraping con Python y guardarlos en formato JSON, y por el otro (<a href="">Franklin</a> y yo) aprendimos cómo conectarnos
+            con Firebase para mostrar esos datos requeridos por nuestra página (<a href="https://www.linkedin.com/in/jfacabreran">Fernando</a>).
+          </p>
+          </div>
+          <figure class="project-image-container">
+            <img class="project-image compra-facil" src="images/compra-facil-images/proyecto-compra-facil-desktop.jpg" width="475" alt="captura de pantalla del proyecto en equipo"/>
+          </figure>
+        </article>
         <article class="project platzi-video">
           <div class="project-details">
           <h3 class="project-title">PlatziVideo</h3>
           <h6 class="project-course">HTML / CSS / JS</h6>
           <p class="project-date"><small><strong>Fecha:</strong> 17/05/19</small></p>
-          <p class="project-url"><small><strong>Míralo clickeando en el siguiente enlace: </strong><a href="html/platzi-video-index.html">www.percymeneses08.com/html/platzi-video-index.html</a></small></p>
+          <p class="project-url"><small><strong>Míralo clickeando en el siguiente enlace: </strong><a href="https://percymeneses08.github.io/PlatziVideo/">https://percymeneses08.github.io/PlatziVideo/</a></small></p>
           <p class="project-description">En este proyecto puse todos mis conocimientos hasta la fecha en práctica. Lo que más se me complicó fue querer agregar cosas
             de los cuales no tenía ni idea de cómo funcionaba, pero investigando pude crear una solución.</p>
           </div>
@@ -69,7 +86,7 @@
           <h3 class="project-title">Movie.es</h3>
           <h6 class="project-course">HTML / CSS / JS</h6>
           <p class="project-date"><small><strong>Fecha:</strong> 27/02/19</small></p>
-          <p class="project-url"><small><strong>Míralo clickeando en el siguiente enlace: </strong><a href="html/theater-index.html">www.percymeneses08.com/html/theater-index.html</a></small></p>
+          <p class="project-url"><small><strong>Míralo clickeando en el siguiente enlace: </strong><a href="https://percymeneses08.github.io/Movie.es/">https://percymeneses08.github.io/Movie.es/</a></small></p>
           <p class="project-description">En este proyecto puse a prueba todos mis conocimientos adquiridos previamente. 
             Esta vez se me hizo más fácil, no me demoré demasiado, en especial, con el maquetado que realicé con ayuda de
             CSS Grid, y el Responsive Design.</p>
@@ -91,7 +108,7 @@
             <img class="project-image" src="images/instagram-images/instagram-page.jpg" width="475" alt="captura de pantalla de mi proyecto de CTA"/>
           </figure>
         </article> -->
-        <article class="project pinterest">
+        <!-- <article class="project pinterest">
           <div class="project-details">
           <h3 class="project-title">Pinterest (layout)</h3>
           <h6 class="project-course">Html / CSS</h6>
@@ -104,7 +121,7 @@
           <figure class="project-image-container">
             <img class="project-image pinterest" src="images/pinterest-images/pinterest-page.jpg" width="475" alt="captura de pantalla de mi proyecto de CTA"/>
           </figure>
-        </article>
+        </article> -->
         <article class="project peso">
           <div class="project-details">
           <h3 class="project-title">El peso en otros lugares</h3>
@@ -134,6 +151,30 @@
       <div class="container eve">
         <article class="event">
           <figure class="event-image-container">
+            <img class="event-image" src="images/portfolio-images/github-hackspace.jpg" width="500" alt="foto de la i/o extended 2018"/>
+          </figure>
+          <div class="event-detail">
+            <h3 class="event-title">Git y GitHub</h3>
+            <p class="event-description">Realicé esta charla porque varios de mis compañeros tenían muchas ganas de usar Git y GitHub,
+              pero no sabían cómo. Entonces me propuse a enseñarles lo fundamental para que empezaran con sus propios proyectos.
+            </p>
+            <a class="event-url" href="https://github.com/percymeneses08" target="blank">Visitar mi GitHub</a>
+          </div>
+        </article>
+        <article class="event">
+          <figure class="event-image-container">
+            <img class="event-image" src="images/portfolio-images/lima-frontend.jpg" width="500" alt="foto de la i/o extended 2018"/>
+          </figure>
+          <div class="event-detail">
+            <h3 class="event-title">Lima Front-end</h3>
+            <p class="event-description">A menudo trato de asistir a diferentes eventos que van realizando las comunidades de tecnología como 
+              LimaJS, GDG Lima, VueJS y Flutter Perú.
+            </p>
+            <a class="event-url" href="https://www.facebook.com/limafrontend/" target="blank">Visitar facebook</a>
+          </div>
+        </article>
+        <article class="event">
+          <figure class="event-image-container">
             <img src="images/portfolio-images/io-extended.jpg" alt="foto de la i/o extended 2018"/>
           </figure>
           <div class="event-detail">
@@ -156,32 +197,10 @@
             </p>
             <a class="event-url" href="https://www.youtube.com/watch?v=TAS1Cl2WfOc" target="_blank">De qué trata</a>
           </div>
-        </article>
-        <!-- Esto de abajo es para aumentar más eventos. -->
-        <!-- 
-        <article class="event">
-          <figure class="event-image-container">
-            <img class="event-image" src="images/io-extended.jpg" width="500" alt="foto de la i/o extended 2018"/>
-          </figure>
-          <div class="event-detail">
-            <h3 class="event-title">Google I/O Extended 2018</h3>
-            <p class="event-description">Escribir de qué se trata</p>
-            <a class="event-url" href="https://www.youtube.com/watch?v=PXyH0X_YLo0" target="blank">Ver plática</a>
-          </div>
-        </article>
-        <article class="event">
-          <figure class="event-image-container">
-            <img class="event-image" src="images/io-extended.jpg" width="500" alt="foto de la i/o extended 2018"/>
-          </figure>
-          <div class="event-detail">
-            <h3 class="event-title">Google I/O Extended 2018</h3>
-            <p class="event-description">Escribir de qué se trata</p>
-            <a class="event-url" href="https://www.youtube.com/watch?v=PXyH0X_YLo0" target="blank">Ver plática</a>
-          </div>
-        </article> -->
+        </article> 
       </div>
     </section>
-    <section class="certificates" id="certificados">
+    <!-- <section class="certificates" id="certificados">
       <section class="container certificates-title">
         <h2>Certificados (destacados)</h2>
       </section>
@@ -190,29 +209,45 @@
           <figure class="certificates-image devfest">
             <img src="images/portfolio-images/certificates/devfest-2018.jpg" alt="devfest-2018"/>
           </figure>
-          <!-- <figure class="certificates-image">
-            <img src="images/portfolio-images/certificates/github.jpg" alt="github.jpg"/>
-          </figure>-->
           <figure class="certificates-image web">
             <img src="images/portfolio-images/certificates/desarrollo-web-online.jpg" alt="desarrollo-web-online.jpg"/>
           </figure>
         </div>
-          <!-- 
-            <figure class="certificates-image">
-            <img src="images/portfolio-images/certificates/inteligencia-artificial-ibm-watson.jpg" alt="inteligencia-artificial-ibm-watson.jpg"/>
-          </figure>
-          <figure class="certificates-image">
-            <img src="images/portfolio-images/certificates/fundamentos-ibm-cloud.jpg" alt="fundamentos-ibm-cloud.jpg"/>
-          </figure>
-          <figure class="certificates-image">
-            <img src="images/portfolio-images/certificates/marca-personal.jpg" alt="marca-personal.jpg"/>
-          </figure>
-          <figure class="certificates-image">
-            <img src="images/portfolio-images/certificates/programacion-basica.jpg" alt="programacion-basica"/>
-          </figure>
-          -->
         <a class="event-url certificates" href="html/portfolio-certificates-index.html" target="_blank">Ver más certificados</a>
       </div>
+    </section> -->
+    <section class="certificates" id="certificados">
+      <section class="container">
+        <h2>Skills</h2>
+        <div>
+          <ul>
+            <li>
+              <p>HTML</p>
+            </li>
+            <li>
+              <p>CSS</p>
+            </li>
+            <li>
+              <p>CSS Flexbox</p>
+            </li>
+            <li>
+              <p>CSS Grid Layout</p>
+            </li>
+            <li>
+              <p>Responsive Design</p>
+            </li>
+            <li>
+              <p>JS</p>
+            </li>
+            <li>
+              <p>Firebase</p>
+            </li>
+            <li>
+              <p>Git y GitHub</p>
+            </li>
+          </ul>
+        </div>
+      </section>
     </section>
     <section class="contact" id="contacto">
       <div class="container width">
@@ -224,7 +259,7 @@
           <div class="social">
             <a href="https://facebook.com/percymeneses08" class="social-link facebook"></a>
             <a href="https://instagram.com/percymeneses08" class="social-link instagram"></a>
-            <!-- <a href="https://twitter.com/percymeneses08" class="social-link twitter"></a> -->
+            <a href="https://twitter.com/percymeneses08" class="social-link twitter"></a>
             <a href="https://linkedin.com/in/percymeneses08" class="social-link linkedin"></a>
             <a href="https://github.com/percymeneses08" class="social-link github"></a>
           </div>
@@ -238,7 +273,7 @@
         <div>
           <p class="developer">Developed by Percy Meneses Luyo with <strong>❤</strong></p>
         </div>
-        <div>2018</div>
+        <div>2019</div>
       </div>
     </footer>
     <div class="bottom-menu">
@@ -259,7 +294,7 @@
           <span>
             <i class="fas fa-scroll"></i>
           </span>
-          <p>Certificados</p>
+          <p>Skills</p>
         </li>
         <li class="contact-link">
           <span>
