--- a/index.html
+++ b/index.html
@@ -245,6 +245,9 @@
             <li>
               <p>Git y GitHub</p>
             </li>
+            <li>
+              <p>Inglés (Intermedio)</p>
+            </li>
           </ul>
         </div>
       </section>
